--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
+    "@graphql-tools/load-files": "^7.0.0",
+    "@graphql-tools/merge": "^9.0.4",
     "apollo-server": "^3.13.0",
-    "graphql": "^16.8.1"
+    "graphql": "^16.8.1",
+    "graphql-tools": "^9.0.1"
   }
 }
